| Summary: | ASTERISK-26513: tests/channels/pjsip/qualify/auth: Crashing enough to be a nuisance | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-10-27 19:31:45 | Date Closed: | 2016-10-28 10:24:43 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The tests/channels/pjsip/qualify/auth test is crashing (and on my own system fracks a lot). This is being caused by a task unreferencing a taskprocessor after the tps_singletons container has been freed. Ideally tps_singletons should be cleaned up later in the process, so that stuff in front that may use taskprocessors doesn't have problems.
This can be seen at https://jenkins.asterisk.org/jenkins/job/periodic-asterisk-13/383/ | ||
| Comments: | By: Friendly Automation (friendly-automation) 2016-10-28 00:14:03.471-0500 Change 4214 had a related patch set uploaded by Corey Farrell: Fix shutdown crash caused by modules being left open. [https://gerrit.asterisk.org/4214|https://gerrit.asterisk.org/4214] By: Friendly Automation (friendly-automation) 2016-10-28 10:23:48.252-0500 Change 4218 had a related patch set uploaded by Corey Farrell: jenkins: Disable PJSIP for REF_DEBUG tests. [https://gerrit.asterisk.org/4218|https://gerrit.asterisk.org/4218] By: Friendly Automation (friendly-automation) 2016-10-28 10:24:34.811-0500 Change 4219 had a related patch set uploaded by Corey Farrell: Fix shutdown crash caused by modules being left open. [https://gerrit.asterisk.org/4219|https://gerrit.asterisk.org/4219] By: Friendly Automation (friendly-automation) 2016-10-28 10:24:44.086-0500 Change 4218 merged by Joshua Colp: jenkins: Disable PJSIP for REF_DEBUG tests. [https://gerrit.asterisk.org/4218|https://gerrit.asterisk.org/4218] By: Friendly Automation (friendly-automation) 2016-10-28 10:24:48.055-0500 Change 4220 had a related patch set uploaded by Corey Farrell: Fix shutdown crash caused by modules being left open. [https://gerrit.asterisk.org/4220|https://gerrit.asterisk.org/4220] By: Friendly Automation (friendly-automation) 2016-10-28 15:14:04.447-0500 Change 4214 merged by zuul: Fix shutdown crash caused by modules being left open. [https://gerrit.asterisk.org/4214|https://gerrit.asterisk.org/4214] By: Friendly Automation (friendly-automation) 2016-10-28 15:54:13.271-0500 Change 4219 merged by zuul: Fix shutdown crash caused by modules being left open. [https://gerrit.asterisk.org/4219|https://gerrit.asterisk.org/4219] By: Friendly Automation (friendly-automation) 2016-10-28 16:22:12.116-0500 Change 4220 merged by zuul: Fix shutdown crash caused by modules being left open. [https://gerrit.asterisk.org/4220|https://gerrit.asterisk.org/4220] By: Friendly Automation (friendly-automation) 2017-05-03 04:17:40.036-0500 Change 4218 merged by George Joseph: jenkins: Disable PJSIP for REF_DEBUG tests. [https://gerrit.asterisk.org/4218|https://gerrit.asterisk.org/4218] | ||